--- a/data/style.css
+++ b/data/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background: cornflowerblue;
+    background: rgb(224, 127, 82);
     }
     p {
     font-size: 1.2em;
