--- a/data/style.css
+++ b/data/style.css
@@ -2,7 +2,7 @@
     font-family: 'Lato', sans-serif;
 }
 :root {
-    --bg-color: #7c4939;
+    --bg-color: #574747;
     --bg-color1: #ffffff;
     --text-color: #77ecc5;
     --text-color1: #000000;
