--- a/data/style.css
+++ b/data/style.css
@@ -25,9 +25,46 @@
     text-align: center;
 }
 
+.popup {
+    display: none; 
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+/*    background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro semi-transparente */
+}
+
+.popup-content {
+    background-color: var(--bg-colorPP);
+    margin: 30% 7%;
+    padding: 20px;
+    border: none;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.close-btn {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
 
 :root {
     --bg-color: #574747;
+    --bg-colorPP: #574747a4;
     --bg-color1: #ffffff;
     --text-color: #77ecc5;
     --text-color1: #000000;
@@ -41,6 +78,10 @@
     text-align: center;
 }
 
+.hora-size{
+    font-size: 170px;
+    font-weight: bold;
+}
 .handleSetTime{
     padding: 10px 10px;
     border: none;
