--- a/data/style.css
+++ b/data/style.css
@@ -84,7 +84,23 @@ h3 { /* ---------------------Texto "Clima" */
     text-align: center;  /* Centra el texto horizontalmente */
 }
 
+.durationBtn{
+    padding: 0.5rem 1rem;
+    background-color: var(--text-color);
+    border-radius: 5px;
+    border-color: #000000;
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
+.durationPopup{
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+    
+}
 /*------------------------------------------------POPUP-------------------------------------------*/
 
 .button-Alarm{ /*------------OBJETO PARA SELECCIONAR LA HORA DE ALARMA*/
@@ -202,6 +218,7 @@ margin-top: 0.1rem;
 }
 
 .popup-content {
+    display: flex;
     background-color: var(--bg-colorPP);
     margin: 30% 7%;
     padding: 20px;
@@ -210,8 +227,11 @@ margin-top: 0.1rem;
     max-width: 700px;
     border-radius: 10px;
     text-align: center;
+    flex-direction: column;
+    align-items: center;
+    
 }
-.hora-size{ /*---------------DISPLAY HORA---------NO MOVER*/
+.hora-size{ /*---------------DISPLAY HORA---------*/
     font-size: 200%;
     font-weight: bold;
     text-align: center;
@@ -220,6 +240,7 @@ margin-top: 0.1rem;
 }
 
 .set{
+    margin-top: 8px;
     padding: 0.5rem 1rem;
     background-color: var(--text-color);
     border-radius: 5px;
@@ -230,3 +251,4 @@ margin-top: 0.1rem;
     padding: 0.5rem 2rem;
     border: none;
 }
+
